fixing horizontal scroll on search results page

--- a/src/assets/styles/pages/searchresults.css
+++ b/src/assets/styles/pages/searchresults.css
@@ -1,5 +1,5 @@
 .searchResultsContainer {
-    margin-top: 12rem;
+    margin: 12rem 2rem 0rem 2rem;
     zoom: 150%;
 }
 
